--- a/config/generic_k8s/deployment.yaml
+++ b/config/generic_k8s/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: sftp-server
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: sftp-server
@@ -15,9 +15,9 @@ spec:
         app: sftp-server
     spec:
       volumes:
-        - name: sftp-data-volume
+        - name: sftp-data-vol
           persistentVolumeClaim:
-            claimName: sftp-data-volume
+            claimName: sftp-data-vol-claim
         - name: sftp-users-config-volume
           configMap:
             name: sftp-users-config
@@ -33,6 +33,6 @@ spec:
           - name: sftp-users-config-volume
             mountPath: /etc/sftp/users.conf
             subPath: users.conf
-          - name: sftp-data-volume
+          - name: sftp-data-vol
             mountPath: /home/
 
