--- a/config/generic_k8s/sftp_data_persistent_claim.yaml
+++ b/config/generic_k8s/sftp_data_persistent_claim.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: sftp-data-volume
+  name: sftp-data-vol-claim
 spec:
-  storageClassName: manual
+  storageClassName: "manual"
   accessModes:
     - ReadWriteOnce
   resources:
