--- a/config/generic_k8s/sftp_data_persistent_volume.yaml
+++ b/config/generic_k8s/sftp_data_persistent_volume.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: sftp-data-volume
+  name: sftp-data-vol
   labels:
     type: local
 spec:
-  storageClassName: manual
+  storageClassName: "manual"
   capacity:
-    storage: 2Gi
+    storage: 3Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
